GNOME Bugzilla – Bug 709296
crashes if totem_pl_parser_load_http_itunes fails
Last modified: 2013-10-06 12:38:59 UTC
I built RB 3.0 from the tarball and, unlike 2.99.x available in Fedora 19, I very often get crashes. It seems to be random, ie seeking back to the same position (or nearby) in the song or podcast that I was playing when it crashed does not cause it to crash again. To reproduce, I just have to let it sit playing music. It doesn't have to switch songs, you can let it play a 2h-long music podcast and it will most likely crash. Here is the result of running it through gdb (it crashed maybe 1-1.5h into the podcast): jeff@krom:~$ gdb /usr/local/bin/rhythmbox GNU gdb (GDB) Fedora 7.6.1-41.fc19 Reading symbols from /usr/local/bin/rhythmbox...done. (gdb) run Starting program: /usr/local/bin/rhythmbox Traceback (most recent call last): File "/usr/share/gdb/auto-load/usr/lib64/libgobject-2.0.so.0.3600.3-gdb.py", line 9, in <module> from gobject import register File "/usr/share/glib-2.0/gdb/gobject.py", line 3, in <module> import gdb.backtrace ImportError: No module named backtrace Traceback (most recent call last): File "/usr/share/gdb/auto-load/usr/lib64/libgobject-2.0.so.0.3600.3-gdb.py", line 9, in <module> from gobject import register File "/usr/share/glib-2.0/gdb/gobject.py", line 3, in <module> import gdb.backtrace ImportError: No module named backtrace [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib64/libthread_db.so.1". Missing separate debuginfo for /lib64/libgraphite2.so.3 Try: yum --enablerepo='*debug*' install /usr/lib/debug/.build-id/a1/aa32c91bc181cb69ebc81bbfd03a1349ea4e33.debug [New Thread 0x7fffef6db700 (LWP 3798)] [New Thread 0x7fffee200700 (LWP 3799)] [New Thread 0x7fffe7fff700 (LWP 3800)] [New Thread 0x7fffe77fe700 (LWP 3801)] [New Thread 0x7fffe685a700 (LWP 3802)] [New Thread 0x7fffd2d07700 (LWP 3804)] [New Thread 0x7fffd20fb700 (LWP 3806)] [New Thread 0x7fffd18fa700 (LWP 3808)] [New Thread 0x7fffd10f9700 (LWP 3810)] [New Thread 0x7fffd08f8700 (LWP 3811)] [New Thread 0x7fffbbdf9700 (LWP 3815)] [Thread 0x7fffe77fe700 (LWP 3801) exited] [New Thread 0x7fffe77fe700 (LWP 3823)] [Thread 0x7fffe77fe700 (LWP 3823) exited] [New Thread 0x7fffbac8b700 (LWP 3824)] [New Thread 0x7fffb9e74700 (LWP 3825)] [New Thread 0x7fffb9673700 (LWP 3826)] [New Thread 0x7fffb8e72700 (LWP 3827)] [New Thread 0x7fffabfff700 (LWP 3828)] [Thread 0x7fffabfff700 (LWP 3828) exited] [Thread 0x7fffe685a700 (LWP 3802) exited] [Thread 0x7fffe7fff700 (LWP 3800) exited] [Thread 0x7fffd18fa700 (LWP 3808) exited] [Thread 0x7fffd08f8700 (LWP 3811) exited] [Thread 0x7fffd2d07700 (LWP 3804) exited] [Thread 0x7fffb9673700 (LWP 3826) exited] [Thread 0x7fffd20fb700 (LWP 3806) exited] [Thread 0x7fffbbdf9700 (LWP 3815) exited] [Thread 0x7fffbac8b700 (LWP 3824) exited] [New Thread 0x7fffbac8b700 (LWP 3831)] [New Thread 0x7fffbbdf9700 (LWP 3832)] [New Thread 0x7fffd20fb700 (LWP 3833)] [New Thread 0x7fffb9673700 (LWP 3834)] [New Thread 0x7fffe685a700 (LWP 3835)] [New Thread 0x7fffd2d07700 (LWP 3836)] [New Thread 0x7fffd18fa700 (LWP 3847)] [Thread 0x7fffd18fa700 (LWP 3847) exited] [Thread 0x7fffd20fb700 (LWP 3833) exited] [Thread 0x7fffb9673700 (LWP 3834) exited] [Thread 0x7fffd2d07700 (LWP 3836) exited] [Thread 0x7fffb9e74700 (LWP 3825) exited] [Thread 0x7fffbbdf9700 (LWP 3832) exited] [Thread 0x7fffe685a700 (LWP 3835) exited] [Thread 0x7fffbac8b700 (LWP 3831) exited] [New Thread 0x7fffbac8b700 (LWP 3854)] [New Thread 0x7fffe685a700 (LWP 3855)] [New Thread 0x7fffbbdf9700 (LWP 3856)] [Thread 0x7fffbbdf9700 (LWP 3856) exited] [Thread 0x7fffbac8b700 (LWP 3854) exited] [New Thread 0x7fffd2d07700 (LWP 3857)] [New Thread 0x7fffd08f8700 (LWP 3858)] [New Thread 0x7fffb9673700 (LWP 3859)] [New Thread 0x7fffaae42700 (LWP 3860)] [New Thread 0x7fffaa222700 (LWP 3862)] (rhythmbox:3794): GdkPixbuf-CRITICAL **: gdk_pixbuf_scale_simple: assertion `dest_width > 0' failed [New Thread 0x7fffa91e3700 (LWP 3863)] [New Thread 0x7fffa89e2700 (LWP 3864)] [New Thread 0x7fff9fffe700 (LWP 3865)] [Thread 0x7fffb9673700 (LWP 3859) exited] [Thread 0x7fff9fffe700 (LWP 3865) exited] [New Thread 0x7fff9fffe700 (LWP 3866)] [Thread 0x7fff9fffe700 (LWP 3866) exited] [Thread 0x7fffd08f8700 (LWP 3858) exited] [New Thread 0x7fffd08f8700 (LWP 3882)] [New Thread 0x7fff9fffe700 (LWP 3883)] [Thread 0x7fffd08f8700 (LWP 3882) exited] [New Thread 0x7fffd08f8700 (LWP 3887)] [Thread 0x7fffd08f8700 (LWP 3887) exited] [Thread 0x7fff9fffe700 (LWP 3883) exited] [New Thread 0x7fff9fffe700 (LWP 3927)] [New Thread 0x7fffd08f8700 (LWP 3928)] [Thread 0x7fff9fffe700 (LWP 3927) exited] [New Thread 0x7fff9fffe700 (LWP 3929)] [Thread 0x7fff9fffe700 (LWP 3929) exited] [Thread 0x7fffd08f8700 (LWP 3928) exited] [New Thread 0x7fffd08f8700 (LWP 3944)] [New Thread 0x7fff9fffe700 (LWP 3945)] [Thread 0x7fffd08f8700 (LWP 3944) exited] [New Thread 0x7fffd08f8700 (LWP 3946)] [Thread 0x7fffd08f8700 (LWP 3946) exited] [Thread 0x7fff9fffe700 (LWP 3945) exited] [New Thread 0x7fff9fffe700 (LWP 3978)] [New Thread 0x7fffd08f8700 (LWP 3979)] [Thread 0x7fffd08f8700 (LWP 3979) exited] [New Thread 0x7fffd08f8700 (LWP 3980)] [Thread 0x7fffd08f8700 (LWP 3980) exited] [Thread 0x7fff9fffe700 (LWP 3978) exited] [New Thread 0x7fff9fffe700 (LWP 4051)] [New Thread 0x7fffd08f8700 (LWP 4052)] [Thread 0x7fff9fffe700 (LWP 4051) exited] [New Thread 0x7fff9fffe700 (LWP 4053)] [New Thread 0x7fffb9673700 (LWP 4055)] [Thread 0x7fffb9673700 (LWP 4055) exited] [Thread 0x7fffd08f8700 (LWP 4052) exited] [Thread 0x7fff9fffe700 (LWP 4053) exited] [New Thread 0x7fff9fffe700 (LWP 4091)] [New Thread 0x7fffd08f8700 (LWP 4092)] [Thread 0x7fffd08f8700 (LWP 4092) exited] [New Thread 0x7fffd08f8700 (LWP 4094)] [Thread 0x7fffd08f8700 (LWP 4094) exited] [Thread 0x7fff9fffe700 (LWP 4091) exited] [New Thread 0x7fff9fffe700 (LWP 4127)] [New Thread 0x7fffd08f8700 (LWP 4128)] [Thread 0x7fffd08f8700 (LWP 4128) exited] [New Thread 0x7fffd08f8700 (LWP 4129)] [Thread 0x7fffd08f8700 (LWP 4129) exited] [Thread 0x7fff9fffe700 (LWP 4127) exited] [New Thread 0x7fff9fffe700 (LWP 4159)] [New Thread 0x7fffd08f8700 (LWP 4160)] [Thread 0x7fffd08f8700 (LWP 4160) exited] [New Thread 0x7fffd08f8700 (LWP 4161)] [Thread 0x7fff9fffe700 (LWP 4159) exited] [Thread 0x7fffd08f8700 (LWP 4161) exited] [New Thread 0x7fffd08f8700 (LWP 4175)] [New Thread 0x7fff9fffe700 (LWP 4176)] [Thread 0x7fff9fffe700 (LWP 4176) exited] [Thread 0x7fffd08f8700 (LWP 4175) exited] [New Thread 0x7fffd08f8700 (LWP 4385)] [New Thread 0x7fff9fffe700 (LWP 4386)] [Thread 0x7fffd08f8700 (LWP 4385) exited] [New Thread 0x7fffd08f8700 (LWP 4388)] [Thread 0x7fffd08f8700 (LWP 4388) exited] [Thread 0x7fff9fffe700 (LWP 4386) exited] [New Thread 0x7fff9fffe700 (LWP 4399)] [New Thread 0x7fffd08f8700 (LWP 4400)] [Thread 0x7fffd08f8700 (LWP 4400) exited] [New Thread 0x7fffd08f8700 (LWP 4402)] [Thread 0x7fffd08f8700 (LWP 4402) exited] [Thread 0x7fff9fffe700 (LWP 4399) exited] [New Thread 0x7fff9fffe700 (LWP 4426)] [New Thread 0x7fffd08f8700 (LWP 4427)] [Thread 0x7fffd08f8700 (LWP 4427) exited] [New Thread 0x7fffd08f8700 (LWP 4428)] [Thread 0x7fffd08f8700 (LWP 4428) exited] [Thread 0x7fff9fffe700 (LWP 4426) exited] [New Thread 0x7fff9fffe700 (LWP 4444)] [New Thread 0x7fffd08f8700 (LWP 4445)] [Thread 0x7fffd08f8700 (LWP 4445) exited] [New Thread 0x7fffd08f8700 (LWP 4446)] [Thread 0x7fffd08f8700 (LWP 4446) exited] [Thread 0x7fff9fffe700 (LWP 4444) exited] [New Thread 0x7fff9fffe700 (LWP 4452)] [New Thread 0x7fffd08f8700 (LWP 4453)] [Thread 0x7fffd08f8700 (LWP 4453) exited] [New Thread 0x7fffd08f8700 (LWP 4454)] [Thread 0x7fffd08f8700 (LWP 4454) exited] [Thread 0x7fff9fffe700 (LWP 4452) exited] [New Thread 0x7fff9fffe700 (LWP 4458)] [New Thread 0x7fffd08f8700 (LWP 4459)] [Thread 0x7fff9fffe700 (LWP 4458) exited] [New Thread 0x7fff9fffe700 (LWP 4460)] [New Thread 0x7fff9f7fd700 (LWP 4461)] [Thread 0x7fff9f7fd700 (LWP 4461) exited] [Thread 0x7fffd08f8700 (LWP 4459) exited] [Thread 0x7fff9fffe700 (LWP 4460) exited] [New Thread 0x7fff9fffe700 (LWP 4463)] [New Thread 0x7fffd08f8700 (LWP 4464)] [Thread 0x7fff9fffe700 (LWP 4463) exited] [New Thread 0x7fff9fffe700 (LWP 4466)] [Thread 0x7fff9fffe700 (LWP 4466) exited] [Thread 0x7fffd08f8700 (LWP 4464) exited] [New Thread 0x7fffd08f8700 (LWP 4469)] [New Thread 0x7fff9fffe700 (LWP 4470)] [Thread 0x7fff9fffe700 (LWP 4470) exited] [New Thread 0x7fff9fffe700 (LWP 4471)] [Thread 0x7fff9fffe700 (LWP 4471) exited] [Thread 0x7fffd08f8700 (LWP 4469) exited] [New Thread 0x7fffd08f8700 (LWP 4484)] [New Thread 0x7fff9fffe700 (LWP 4485)] [Thread 0x7fff9fffe700 (LWP 4485) exited] [New Thread 0x7fff9fffe700 (LWP 4486)] [Thread 0x7fff9fffe700 (LWP 4486) exited] [Thread 0x7fffd08f8700 (LWP 4484) exited] [New Thread 0x7fffd08f8700 (LWP 4488)] [New Thread 0x7fff9fffe700 (LWP 4489)] [Thread 0x7fffd08f8700 (LWP 4488) exited] [New Thread 0x7fffd08f8700 (LWP 4490)] [Thread 0x7fffd08f8700 (LWP 4490) exited] [Thread 0x7fff9fffe700 (LWP 4489) exited] [New Thread 0x7fff9fffe700 (LWP 4502)] [New Thread 0x7fffd08f8700 (LWP 4503)] [Thread 0x7fffd08f8700 (LWP 4503) exited] [New Thread 0x7fffd08f8700 (LWP 4504)] [Thread 0x7fffd08f8700 (LWP 4504) exited] [Thread 0x7fff9fffe700 (LWP 4502) exited] [New Thread 0x7fff9fffe700 (LWP 4507)] [New Thread 0x7fffd08f8700 (LWP 4508)] [Thread 0x7fffd08f8700 (LWP 4508) exited] [New Thread 0x7fffd08f8700 (LWP 4509)] [Thread 0x7fffd08f8700 (LWP 4509) exited] [Thread 0x7fff9fffe700 (LWP 4507) exited] [New Thread 0x7fff9fffe700 (LWP 4533)] [New Thread 0x7fffd08f8700 (LWP 4534)] [Thread 0x7fff9fffe700 (LWP 4533) exited] [New Thread 0x7fff9fffe700 (LWP 4535)] [Thread 0x7fff9fffe700 (LWP 4535) exited] [Thread 0x7fffd08f8700 (LWP 4534) exited] [New Thread 0x7fffd08f8700 (LWP 4585)] [New Thread 0x7fff9fffe700 (LWP 4586)] [Thread 0x7fff9fffe700 (LWP 4586) exited] [New Thread 0x7fff9fffe700 (LWP 4587)] [Thread 0x7fff9fffe700 (LWP 4587) exited] [Thread 0x7fffd08f8700 (LWP 4585) exited] [New Thread 0x7fffd08f8700 (LWP 4597)] [New Thread 0x7fff9fffe700 (LWP 4598)] [Thread 0x7fffd08f8700 (LWP 4597) exited] [New Thread 0x7fffd08f8700 (LWP 4599)] [Thread 0x7fffd08f8700 (LWP 4599) exited] [Thread 0x7fff9fffe700 (LWP 4598) exited] [New Thread 0x7fff9fffe700 (LWP 4611)] [New Thread 0x7fffd08f8700 (LWP 4612)] [Thread 0x7fffd08f8700 (LWP 4612) exited] [New Thread 0x7fffd08f8700 (LWP 4613)] [Thread 0x7fffd08f8700 (LWP 4613) exited] [Thread 0x7fff9fffe700 (LWP 4611) exited] [New Thread 0x7fff9fffe700 (LWP 4622)] [New Thread 0x7fffd08f8700 (LWP 4623)] [Thread 0x7fffd08f8700 (LWP 4623) exited] [New Thread 0x7fffd08f8700 (LWP 4625)] [Thread 0x7fffd08f8700 (LWP 4625) exited] [Thread 0x7fff9fffe700 (LWP 4622) exited] [New Thread 0x7fff9fffe700 (LWP 4684)] [New Thread 0x7fffd08f8700 (LWP 4685)] [Thread 0x7fffd08f8700 (LWP 4685) exited] [New Thread 0x7fffd08f8700 (LWP 4686)] [Thread 0x7fffd08f8700 (LWP 4686) exited] [Thread 0x7fff9fffe700 (LWP 4684) exited] [New Thread 0x7fff9fffe700 (LWP 4706)] [New Thread 0x7fffd08f8700 (LWP 4707)] [Thread 0x7fffd08f8700 (LWP 4707) exited] [New Thread 0x7fffd08f8700 (LWP 4708)] [Thread 0x7fffd08f8700 (LWP 4708) exited] [Thread 0x7fff9fffe700 (LWP 4706) exited] [New Thread 0x7fff9fffe700 (LWP 4851)] [New Thread 0x7fffd08f8700 (LWP 4852)] [Thread 0x7fffd08f8700 (LWP 4852) exited] [New Thread 0x7fffd08f8700 (LWP 4853)] [Thread 0x7fffd08f8700 (LWP 4853) exited] [Thread 0x7fff9fffe700 (LWP 4851) exited] [New Thread 0x7fff9fffe700 (LWP 4860)] [New Thread 0x7fffd08f8700 (LWP 4861)] [Thread 0x7fffd08f8700 (LWP 4861) exited] [New Thread 0x7fffd08f8700 (LWP 4863)] [Thread 0x7fffd08f8700 (LWP 4863) exited] [Thread 0x7fff9fffe700 (LWP 4860) exited] [New Thread 0x7fff9fffe700 (LWP 4888)] [New Thread 0x7fffd08f8700 (LWP 4889)] [Thread 0x7fffd08f8700 (LWP 4889) exited] [New Thread 0x7fffd08f8700 (LWP 4897)] [Thread 0x7fffd08f8700 (LWP 4897) exited] [Thread 0x7fff9fffe700 (LWP 4888) exited] [New Thread 0x7fff9fffe700 (LWP 4961)] [New Thread 0x7fffd08f8700 (LWP 4962)] [Thread 0x7fff9fffe700 (LWP 4961) exited] [New Thread 0x7fff9fffe700 (LWP 4963)] [Thread 0x7fffd08f8700 (LWP 4962) exited] [Thread 0x7fff9fffe700 (LWP 4963) exited] [New Thread 0x7fff9fffe700 (LWP 5101)] [New Thread 0x7fffd08f8700 (LWP 5102)] [Thread 0x7fffd08f8700 (LWP 5102) exited] [New Thread 0x7fffd08f8700 (LWP 5103)] [Thread 0x7fffd08f8700 (LWP 5103) exited] [Thread 0x7fff9fffe700 (LWP 5101) exited] [New Thread 0x7fff9fffe700 (LWP 5106)] [New Thread 0x7fffd08f8700 (LWP 5107)] [Thread 0x7fffd08f8700 (LWP 5107) exited] [New Thread 0x7fffd08f8700 (LWP 5108)] [Thread 0x7fff9fffe700 (LWP 5106) exited] [Thread 0x7fffd08f8700 (LWP 5108) exited] [New Thread 0x7fffd08f8700 (LWP 5234)] [New Thread 0x7fff9fffe700 (LWP 5235)] [Thread 0x7fff9fffe700 (LWP 5235) exited] [New Thread 0x7fff9fffe700 (LWP 5236)] [Thread 0x7fff9fffe700 (LWP 5236) exited] [Thread 0x7fffd08f8700 (LWP 5234) exited] [New Thread 0x7fffd08f8700 (LWP 5238)] [New Thread 0x7fff9fffe700 (LWP 5239)] [Thread 0x7fff9fffe700 (LWP 5239) exited] [New Thread 0x7fff9fffe700 (LWP 5241)] [Thread 0x7fff9fffe700 (LWP 5241) exited] [Thread 0x7fffd08f8700 (LWP 5238) exited] [New Thread 0x7fffd08f8700 (LWP 5251)] [New Thread 0x7fff9fffe700 (LWP 5252)] [Thread 0x7fff9fffe700 (LWP 5252) exited] [New Thread 0x7fff9fffe700 (LWP 5253)] [Thread 0x7fffd08f8700 (LWP 5251) exited] [Thread 0x7fff9fffe700 (LWP 5253) exited] [New Thread 0x7fff9fffe700 (LWP 5270)] [New Thread 0x7fffd08f8700 (LWP 5271)] [Thread 0x7fffd08f8700 (LWP 5271) exited] [New Thread 0x7fffd08f8700 (LWP 5272)] [Thread 0x7fff9fffe700 (LWP 5270) exited] [Thread 0x7fffd08f8700 (LWP 5272) exited] [New Thread 0x7fffd08f8700 (LWP 5279)] [New Thread 0x7fff9fffe700 (LWP 5280)] [Thread 0x7fff9fffe700 (LWP 5280) exited] [New Thread 0x7fff9fffe700 (LWP 5281)] [Thread 0x7fffd08f8700 (LWP 5279) exited] [Thread 0x7fff9fffe700 (LWP 5281) exited] [New Thread 0x7fff9fffe700 (LWP 5289)] [New Thread 0x7fffd08f8700 (LWP 5290)] [Thread 0x7fff9fffe700 (LWP 5289) exited] [New Thread 0x7fff9fffe700 (LWP 5291)] [Thread 0x7fff9fffe700 (LWP 5291) exited] [Thread 0x7fffd08f8700 (LWP 5290) exited] [New Thread 0x7fffd08f8700 (LWP 5294)] [New Thread 0x7fff9fffe700 (LWP 5295)] [Thread 0x7fffd08f8700 (LWP 5294) exited] [New Thread 0x7fffd08f8700 (LWP 5297)] [Thread 0x7fffd08f8700 (LWP 5297) exited] [Thread 0x7fff9fffe700 (LWP 5295) exited] [New Thread 0x7fff9fffe700 (LWP 5323)] [New Thread 0x7fffd08f8700 (LWP 5324)] [Thread 0x7fff9fffe700 (LWP 5323) exited] [New Thread 0x7fff9fffe700 (LWP 5325)] [Thread 0x7fff9fffe700 (LWP 5325) exited] [Thread 0x7fffd08f8700 (LWP 5324) exited] [New Thread 0x7fffd08f8700 (LWP 5326)] [New Thread 0x7fff9fffe700 (LWP 5327)] [Thread 0x7fff9fffe700 (LWP 5327) exited] [New Thread 0x7fff9fffe700 (LWP 5328)] [Thread 0x7fff9fffe700 (LWP 5328) exited] [Thread 0x7fffd08f8700 (LWP 5326) exited] [New Thread 0x7fffd08f8700 (LWP 5340)] [New Thread 0x7fff9fffe700 (LWP 5341)] [Thread 0x7fffd08f8700 (LWP 5340) exited] [New Thread 0x7fffd08f8700 (LWP 5342)] [Thread 0x7fffd08f8700 (LWP 5342) exited] [Thread 0x7fff9fffe700 (LWP 5341) exited] [New Thread 0x7fff9fffe700 (LWP 5361)] [New Thread 0x7fffd08f8700 (LWP 5362)] [Thread 0x7fff9fffe700 (LWP 5361) exited] [New Thread 0x7fff9fffe700 (LWP 5363)] [Thread 0x7fff9fffe700 (LWP 5363) exited] [Thread 0x7fffd08f8700 (LWP 5362) exited] [New Thread 0x7fffd08f8700 (LWP 5384)] [New Thread 0x7fff9fffe700 (LWP 5385)] [Thread 0x7fff9fffe700 (LWP 5385) exited] [New Thread 0x7fff9fffe700 (LWP 5387)] [Thread 0x7fff9fffe700 (LWP 5387) exited] [Thread 0x7fffd08f8700 (LWP 5384) exited] [New Thread 0x7fffd08f8700 (LWP 5390)] [New Thread 0x7fff9fffe700 (LWP 5391)] [Thread 0x7fffd08f8700 (LWP 5390) exited] [New Thread 0x7fffd08f8700 (LWP 5392)] [Thread 0x7fffd08f8700 (LWP 5392) exited] [Thread 0x7fff9fffe700 (LWP 5391) exited] [New Thread 0x7fff9fffe700 (LWP 5470)] [New Thread 0x7fffd08f8700 (LWP 5471)] [Thread 0x7fffd08f8700 (LWP 5471) exited] [New Thread 0x7fffd08f8700 (LWP 5472)] [Thread 0x7fffd08f8700 (LWP 5472) exited] [Thread 0x7fff9fffe700 (LWP 5470) exited] [New Thread 0x7fff9fffe700 (LWP 5641)] [New Thread 0x7fffd08f8700 (LWP 5642)] [Thread 0x7fffd08f8700 (LWP 5642) exited] [New Thread 0x7fffd08f8700 (LWP 5643)] [Thread 0x7fffd08f8700 (LWP 5643) exited] [Thread 0x7fff9fffe700 (LWP 5641) exited] [New Thread 0x7fff9fffe700 (LWP 5690)] [New Thread 0x7fffd08f8700 (LWP 5691)] [Thread 0x7fffd08f8700 (LWP 5691) exited] [New Thread 0x7fffd08f8700 (LWP 5692)] [Thread 0x7fffd08f8700 (LWP 5692) exited] [Thread 0x7fff9fffe700 (LWP 5690) exited] [New Thread 0x7fff9fffe700 (LWP 5942)] [New Thread 0x7fffd08f8700 (LWP 5943)] [Thread 0x7fffd08f8700 (LWP 5943) exited] [New Thread 0x7fffd08f8700 (LWP 5945)] [Thread 0x7fffd08f8700 (LWP 5945) exited] [Thread 0x7fff9fffe700 (LWP 5942) exited] [New Thread 0x7fff9fffe700 (LWP 5971)] [New Thread 0x7fffd08f8700 (LWP 5972)] [Thread 0x7fff9fffe700 (LWP 5971) exited] [New Thread 0x7fff9fffe700 (LWP 5973)] [Thread 0x7fff9fffe700 (LWP 5973) exited] [Thread 0x7fffd08f8700 (LWP 5972) exited] [New Thread 0x7fffd08f8700 (LWP 6010)] [New Thread 0x7fff9fffe700 (LWP 6011)] [Thread 0x7fffd08f8700 (LWP 6010) exited] [New Thread 0x7fffd08f8700 (LWP 6012)] [Thread 0x7fffd08f8700 (LWP 6012) exited] [Thread 0x7fff9fffe700 (LWP 6011) exited] [New Thread 0x7fff9fffe700 (LWP 6013)] [New Thread 0x7fffd08f8700 (LWP 6014)] [Thread 0x7fffd08f8700 (LWP 6014) exited] [New Thread 0x7fffd08f8700 (LWP 6015)] [Thread 0x7fffd08f8700 (LWP 6015) exited] [Thread 0x7fff9fffe700 (LWP 6013) exited] [New Thread 0x7fff9fffe700 (LWP 6035)] [New Thread 0x7fffd08f8700 (LWP 6036)] [Thread 0x7fff9fffe700 (LWP 6035) exited] [New Thread 0x7fff9fffe700 (LWP 6037)] [Thread 0x7fff9fffe700 (LWP 6037) exited] [Thread 0x7fffd08f8700 (LWP 6036) exited] [New Thread 0x7fffd08f8700 (LWP 6042)] [New Thread 0x7fff9fffe700 (LWP 6043)] [Thread 0x7fffd08f8700 (LWP 6042) exited] [New Thread 0x7fffd08f8700 (LWP 6045)] [Thread 0x7fff9fffe700 (LWP 6043) exited] [Thread 0x7fffd08f8700 (LWP 6045) exited] [New Thread 0x7fffd08f8700 (LWP 6075)] [New Thread 0x7fff9fffe700 (LWP 6076)] [Thread 0x7fffd08f8700 (LWP 6075) exited] [New Thread 0x7fffd08f8700 (LWP 6077)] [Thread 0x7fffd08f8700 (LWP 6077) exited] [Thread 0x7fff9fffe700 (LWP 6076) exited] [New Thread 0x7fff9fffe700 (LWP 6095)] [New Thread 0x7fffd08f8700 (LWP 6096)] [Thread 0x7fff9fffe700 (LWP 6095) exited] [New Thread 0x7fff9fffe700 (LWP 6097)] [Thread 0x7fff9fffe700 (LWP 6097) exited] [Thread 0x7fffd08f8700 (LWP 6096) exited] [New Thread 0x7fffd08f8700 (LWP 6117)] [New Thread 0x7fff9fffe700 (LWP 6118)] [Thread 0x7fffd08f8700 (LWP 6117) exited] [New Thread 0x7fffd08f8700 (LWP 6119)] [Thread 0x7fffd08f8700 (LWP 6119) exited] [Thread 0x7fff9fffe700 (LWP 6118) exited] [New Thread 0x7fff9fffe700 (LWP 6120)] [New Thread 0x7fffd08f8700 (LWP 6121)] [Thread 0x7fff9fffe700 (LWP 6120) exited] [New Thread 0x7fff9fffe700 (LWP 6122)] [New Thread 0x7fff9effc700 (LWP 6123)] [New Thread 0x7fff9e7fb700 (LWP 6124)] [Thread 0x7fff9effc700 (LWP 6123) exited] Program received signal SIGSEGV, Segmentation fault.
+ Trace 232567
Thread 140735877736192 (LWP 6122)
Thread 218 (Thread 0x7fff9fffe700 (LWP 6122))
FWIW, in this case it crashed at 59:49 of 1:59:51 in my podcast, but I'm pretty sure seeking back to that position wouldn't trigger the issue.
Looks like it's crashing trying to parse 'http://itunes.apple.com/us/podcast/trance-island/id554315361?mt=2&uo=4'. Can you try running the parser test program (podcast/test-podcast-parse in the rhythmbox source tree) with this url?
Indeed, running that test command with the 3.0 tarball caused an instantaneous segfault for me on the first try... but subsequent tries did not crash and printed the contents to the terminal. The "good" news is that git master exhibits the same issue.
By all evidence the bug is in totem-pl-parser, so if you can still reproduce it somehow, install debug symbols for that and get another stack trace.
Output from test-podcast-parse --debug http://itunes.apple.com/... may also help.
Apparently the test-podcast-parse executable has no such thing as a --debug option... Will see if I get the same crash again with gdb now that I have totem-*debuginfo installed...
Oops, I didn't read the code closely enough. It's the other way around, 'test-podcast-parse http://whatever/ --debug'.
Seems like this is really quite random, I spent nearly the whole day yesterday playing music and podcasts without it hanging up on me, left it paused at the end of the day, and then this morning when I went to resume playback it was hung, like this: (gdb) bt full
+ Trace 232572
Thread 720 (Thread 0x7fff86fba700 (LWP 7332))
Hope that trace is more helpful (and related to the same issue).
It's pretty conclusive. totem_pl_parser_load_http_itunes returns NULL if the request fails, but neither of the callers check for that, so if the request fails they crash.
Created attachment 256564 [details] [review] plparse: Fix possible crash in iTunes Podcast parsing Check the return value of totem_pl_parser_load_http_itunes() to avoid possible crash.
Attachment 256564 [details] pushed as e3ba8a9 - plparse: Fix possible crash in iTunes Podcast parsing