plparse: Fix possible crash in iTunes Podcast parsing

Check the return value of totem_pl_parser_load_http_itunes()
to avoid possible crash.

https://bugzilla.gnome.org/show_bug.cgi?id=709296